--- a/references.bib
+++ b/references.bib
@@ -24,6 +24,7 @@
   title={Practical Data Science with {R}},
   year={2019},
   publisher={Manning},
+  address={Shelter Island, NY, USA},
   edition=2}
 
 @book{Wickham2023,
