Fixed cleveref and fncychap bug.

--- a/main.tex
+++ b/main.tex
@@ -33,10 +33,9 @@
 \DeclareMathOperator{\Var}{V}
 \DeclareMathOperator{\sign}{sign}
 
+\usepackage[Bjornstrup]{fncychap} % must come before cleveref to avoid break appendix name
 \usepackage{cleveref}
 \newcommand\pcref[1]{(\cref{#1})}
-
-\usepackage[Bjornstrup]{fncychap}
 
 \usepackage{tikz}
 \usetikzlibrary{shapes, arrows.meta, positioning, shapes.geometric}
