--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -7,7 +7,7 @@
 
 Fundamental concepts in data science come from a variety of fields, including
 mathematics, statistics, computer science, optimization theory, and information theory.
-This chapter provides a brief overview of the main computational, mathematical and statistical
+This appendix provides a brief overview of the main computational, mathematical and statistical
 concepts in data science.
 
 My goal is not to provide a comprehensive treatment of these topics, but to consolidate
